# project-mochi

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ruff.yml  tests.yml
app/: config.py  main.py  warmup.py
app/agent/: confirm.py  email_read.py  graph.py  persona.md  persona.py  profile.py  quarantine.py  rate_limit.py  router.py  sanitize.py  tool_select.py
app/agent/tools/: __init__.py  builder_tools.py  expert_tools.py  google_tools.py  interaction_tools.py  memory_tools.py  reminder_tools.py  web_tools.py
app/builder/: __init__.py  codegen.py  docs.py  sandbox.py  serve.py  workspace.py
app/channels/: base.py  render.py  telegram.py  telegram_buttons.py  telegram_commands.py  telegram_stream.py
app/integrations/: google_auth.py  google_calendar.py  google_gmail.py  web_search.py
app/memory/: db.py  embeddings.py  extract.py  models.py  store.py
app/proactive/: briefing.py  email_signals.py  jobs.py  reminder_calendar.py  reminder_time.py  reminders.py  text_match.py
docs/: 00-plan.md  01-primer.md  02-architectures.md  03-phase0-build.md  04-constitution.md  05-phase1-build.md  06-phase2-build.md  07-phase3a-build.md  08-phase3b-build.md  09-phase4a-build.md  10-phase4b-build.md  11-phase6-build.md  12-read-email-build.md  13-web-search-build.md  14-future-work.md  profile-extraction-prompt.md
launchd/: com.mochi.agent.plist  com.mochi.backup.plist
ollama/: Modelfile.qwen2.5-7b-8k
scripts/: _verify_lib.py  audit_session_scope.py  backup_db.sh  import_profile.py  preflight.sh  restore_check.sh  review_signals.sh  run_mochi.sh  verify_all.sh  verify_dynamic_tools.py  verify_firing.py  verify_phase1.py  verify_phase2.py  verify_phase3.py  verify_phase3b.py  verify_phase4a.py  verify_phase4b.py  verify_scenarios.py  verify_web_search.py
tests/: conftest.py  test_ask_user.py  test_ask_ux.py  test_briefing.py  test_builder.py  test_cancel_reminder_choice.py  test_channel_buttons.py  test_channel_commands.py  test_channel_wiring.py  test_confirm_gate.py  test_db_isolation.py  test_edge_cases.py  test_email_read.py  test_email_signals.py  test_expert_tool.py  test_fact_sweep.py  test_google_services.py  test_hardening.py  test_import_profile.py  test_memory_recall.py  test_profile_card.py  test_regressions.py  test_reminder_tools_session.py  test_reminders.py  test_render.py  test_retire_task.py  test_router.py  test_sanitize.py  test_single_instance.py  test_status_map.py  test_streaming_transport.py  test_summarize_trim.py  test_tool_select.py  test_tool_select_followup.py  test_tool_wrappers.py  test_tools_execute.py  test_verify_lib.py  test_warmup.py  test_web_search.py
tests/fixtures/: email_signals.json  memory_recall.json
tests/support/: __init__.py  factories.py  fakes.py
