[project]
name = "personal-agent"
version = "0.1.0"
description = "A private, local-first personal AI agent: Telegram -> LangGraph -> local Ollama model, with durable Postgres state."
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.60",
    "langchain-openai>=0.2.10",
    "langchain-core>=0.3.20",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "python-telegram-bot[job-queue]>=21.6",
    "pydantic-settings>=2.6.0",
    "sqlmodel>=0.0.39",
    "pgvector>=0.5.0",
    "httpx>=0.28.1",
    "google-api-python-client>=2.198.0",
    "google-auth-oauthlib>=1.4.0",
    "dateparser>=1.4.1",
    "telegramify-markdown>=1.2.0",
    "reportlab>=5.0.0",
    "python-docx>=1.2.0",
    "ddgs>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
]

# Treat this as an application, not an installable library, so tooling
# (uv/pip) does not try to build a wheel for the root project.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Ruff's defaults are only E4/E7/E9 + F, which misses import order, dead arguments, and every
# modernization. These are the rule families that earn their keep on this codebase.
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM", "C4", "PERF", "PIE", "RET", "ARG", "RUF"]
# The docs and comments use en dashes and × deliberately; RUF001-003 would flag every one of them.
# Checked before ignoring: the only hits inside string *literals* (google_calendar/google_tools
# labels) are display text like "Next week (Jul 21–Jul 27)", never match targets.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
# Test stubs and fakes must mirror the signature of whatever they stand in for, so unused
# arguments are the point. Scoped here rather than dropped globally: ARG found 172 hits under
# tests/ but only 8 in real code, and all 8 were worth fixing.
"tests/**" = ["ARG"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # app/ is importable without PYTHONPATH (project is not installed; package = false)
markers = [
    # Tests that need a real local embedding model (Ollama + nomic-embed) — deselected in
    # CI with `-m "not needs_ollama"`; they run in the local gate. See .github/workflows/tests.yml.
    "needs_ollama: requires a running Ollama with the embedding model (real semantic vectors)",
]
